# Podcast-Generator

./: README.md  pyproject.toml  requirements.txt  voices.txt
.devcontainer/: devcontainer.json
Backend/: combined_api.py  main_api.py
Backend/modules/: script_api.py  tts_api.py
Demo/: streamlit_app.py
